--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <title>recipe app // Search over 1,000,000 recipes</title>
-  </head>
+</head>
+<body>
+   <div class="container">
+    <header class="header">
+        <form class="search">
+            <input
+              type="text"
+              class="search__field"
+              placeholder="Search recipes..."
+            />
+            <button class="btn search__btn">
+              <svg class="search__icon">
+                <!--add icon-->
+              </svg>
+              <span>Search</span>
+            </button>
+          </form>
+    </header>
+   </div> 
+</body>
+</html>
