adds navigation items

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
               <span>Search</span>
             </button>
           </form>
+
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <button class="nav__btn nav__btn--add-recipe">
+                  <svg class="nav__icon">
+                   <!--add icon-->
+                  </svg>
+                  <span>Add recipe</span>
+                </button>
+              </li>
+
+              
     </header>
    </div> 
 </body>
