--- a/index.html
+++ b/index.html
@@ -81,6 +81,27 @@
     </div>
     </div>
 
+    <div class="overlay hidden"></div>
+<div class="add-recipe-window hidden">
+<button class="btn--close-modal">&times;</button>
+<form class="upload">
+<div class="upload__column">
+  <h3 class="upload__heading">Recipe data</h3>
+  <label>Title</label>
+  <input value="1" required name="title" type="text" />
+  <label>URL</label>
+  <input value="2" required name="sourceUrl" type="text" />
+  <label>Image URL</label>
+  <input value="3" required name="image" type="text" />
+  <label>Publisher</label>
+  <input value="4" required name="publisher" type="text" />
+  <label>Prep time</label>
+  <input value="5" required name="cookingTime" type="number" />
+  <label>Servings</label>
+  <input value="6" required name="servings" type="number" />
+</div>
+
+
    </div> 
 </body>
 </html>
