--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
-    <title>recipe app // Search over 1,000,000 recipes</title>
+    <title>recipe app | Search over 1,000,000 recipes</title>
 </head>
 <body>
    <div class="container">
@@ -144,7 +144,14 @@
       placeholder="Format: 'Quantity,Unit,Description'"
     />
   </div>
-
+  <button class="btn upload__btn">
+    <svg>
+      <!--rem use icon-->
+    </svg>
+    <span>Upload</span>
+  </button>
+  </form>
    </div> 
+   <script src="app.js"></script>
 </body>
 </html>
