--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 </li>
             </ul>
         </nav>
-        
     </header>
 
     <div class="search-results">
@@ -67,10 +66,12 @@
         <div class="pagination"></div>
     
         <div class="recipe">
+          <div class="recipe__exit hidden">
+            <button class="btn--exit">&times;</button>
+          </div>
           <div class="message">
             <p>Start by searching for a recipe or an ingredient.</p>
             <button class="btn--random">Add Random Recipe</button>
-        </div>
           </div>
         </div>
     </div>
@@ -111,6 +112,7 @@
             </button>
         </form>
     </div>
+   </div>
 
    <script src="app.js"></script>
 </body>
