--- a/index.html
+++ b/index.html
@@ -62,17 +62,14 @@
     </header>
 
     <div class="search-results">
+        <div class="results__exit">
+
         <ul class="results"></ul>
-        <div class="pagination"></div>
-    
         <div class="recipe">
-          <div class="recipe__exit hidden">
-            <button class="btn--exit">&times;</button>
-          </div>
           <div class="message">
             <p>Start by searching for a recipe or an ingredient.</p>
             <button class="btn--random">Add Random Recipe</button>
-          </div>
+          </div> 
         </div>
     </div>
 
