--- a/index.html
+++ b/index.html
@@ -62,14 +62,9 @@
     </header>
 
     <div class="search-results">
-        <div class="results__exit">
-
         <ul class="results"></ul>
         <div class="recipe">
-          <div class="message">
-            <p>Start by searching for a recipe or an ingredient.</p>
-            <button class="btn--random">Add Random Recipe</button>
-          </div> 
+            <p>Start by searching for a recipe.</p>
         </div>
     </div>
 
